# rCore

./: .gitignore
os/: Cargo.toml  README.md
os/scripts/: qemu-ver-check.sh
os/src/: batch.rs  console.rs  lang_items.rs  logging.rs  main.rs  sbi.rs
os/src/boards/: qemu.rs
os/src/sync/: mod.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs
user/: Cargo.toml
user/src/: lib.rs
